samples/_failures_safe/1761174222_3ac672_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05aa968c.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_05aa968c.c:136:5: error: expected expression at end of input
  136 |     int count =
      |     ^~~
./samples/SAFE/__tmp_05aa968c.c:136:5: error: expected declaration or statement at end of input
